Closed Bug 996768 Opened 11 years ago Closed 11 years ago

ContainerLayer{D3D10,Composite}.cpp don't play nicely with unified builds

Categories

(Core :: Graphics: Layers, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla31

People

(Reporter: kats, Assigned: kats)

References

Details

Attachments

(1 file)

While trying to implement bug 995411 my try push failed on Win XP (Debug and Opt). Turns out both ContainerLayerD3D10.cpp and ContainerLayerComposite.cpp have a function called HasOpaqueAncestorLayer and if both files get put into the same unified build compilation module then the compiler doesn't like it.
Comment on attachment 8407039 [details] [diff] [review] Tentative patch Pretty small patch, removing duplicated code.
Attachment #8407039 - Flags: review?(bas)
Attachment #8407039 - Flags: review?(bas) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: