Bug 996768 - Remove redundant copies of HasOpaqueAncestorLayer. r=Bas